cor da descrição alterada

--- a/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.html
+++ b/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.html
@@ -37,7 +37,7 @@
           <th><h4>Gestão Interna</h4></th>
           <th></th>
         </tr>
-        <tr *ngFor="let pergunta of perguntasST1; let i = index">
+        <tr class="selecao" *ngFor="let pergunta of perguntasST1; let i = index">
           <td>
             <label class="pergunta">
               <p>{{ pergunta }}</p>
@@ -51,7 +51,7 @@
           <th><h4>Benefícios</h4></th>
           <th></th>
         </tr>
-        <tr class="tabela" *ngFor="let pergunta of perguntasST2; let i = index">
+        <tr class="selecao" *ngFor="let pergunta of perguntasST2; let i = index">
           <td>
             <label class="pergunta">
               <p>{{ pergunta }}</p>
@@ -65,7 +65,7 @@
           <th><h4>Cultura Organizacional</h4></th>
           <th></th>
         </tr>
-        <tr class="tabela" *ngFor="let pergunta of perguntasST3; let i = index">
+        <tr class="selecao" *ngFor="let pergunta of perguntasST3; let i = index">
           <td>
             <label class="pergunta">
               <p>{{ pergunta }}</p>
@@ -79,7 +79,7 @@
           <th><h4>Oportunidades de Crescimento</h4></th>
           <th></th>
         </tr>
-        <tr class="tabela" *ngFor="let pergunta of perguntasST4; let i = index">
+        <tr class="selecao" *ngFor="let pergunta of perguntasST4; let i = index">
           <td>
             <label class="pergunta">
               <p>{{ pergunta }}</p>
@@ -120,7 +120,7 @@
             <th><h4>Gestão Interna</h4></th>
             <th></th>
           </tr>
-          <tr *ngFor="let pergunta of perguntasST1; let i = index">
+          <tr class="selecao" *ngFor="let pergunta of perguntasST1; let i = index">
             <td>
               <label class="pergunta">
                 <p>{{ pergunta }}</p>
@@ -134,7 +134,7 @@
             <th><h4>Benefícios</h4></th>
             <th></th>
           </tr>
-          <tr class="tabela" *ngFor="let pergunta of perguntasST2; let i = index">
+          <tr class="selecao" *ngFor="let pergunta of perguntasST2; let i = index">
             <td>
               <label class="pergunta">
                 <p>{{ pergunta }}</p>
@@ -148,7 +148,7 @@
             <th><h4>Cultura Organizacional</h4></th>
             <th></th>
           </tr>
-          <tr class="tabela" *ngFor="let pergunta of perguntasST3; let i = index">
+          <tr class="selecao" *ngFor="let pergunta of perguntasST3; let i = index">
             <td>
               <label class="pergunta">
                 <p>{{ pergunta }}</p>
@@ -162,7 +162,7 @@
             <th><h4>Oportunidades de Crescimento</h4></th>
             <th></th>
           </tr>
-          <tr class="tabela" *ngFor="let pergunta of perguntasST4; let i = index">
+          <tr class="selecao" *ngFor="let pergunta of perguntasST4; let i = index">
             <td>
               <label class="pergunta">
                 <p>{{ pergunta }}</p>
@@ -203,7 +203,7 @@
             <th><h4>Gestão Interna</h4></th>
             <th></th>
           </tr>
-          <tr *ngFor="let pergunta of perguntasST1; let i = index">
+          <tr class="selecao" *ngFor="let pergunta of perguntasST1; let i = index">
             <td>
               <label class="pergunta">
                 <p>{{ pergunta }}</p>
@@ -217,7 +217,7 @@
             <th><h4>Benefícios</h4></th>
             <th></th>
           </tr>
-          <tr class="tabela" *ngFor="let pergunta of perguntasST2; let i = index">
+          <tr class="selecao" *ngFor="let pergunta of perguntasST2; let i = index">
             <td>
               <label class="pergunta">
                 <p>{{ pergunta }}</p>
@@ -231,7 +231,7 @@
             <th><h4>Cultura Organizacional</h4></th>
             <th></th>
           </tr>
-          <tr class="tabela" *ngFor="let pergunta of perguntasST3; let i = index">
+          <tr class="selecao" *ngFor="let pergunta of perguntasST3; let i = index">
             <td>
               <label class="pergunta">
                 <p>{{ pergunta }}</p>
@@ -245,7 +245,7 @@
             <th><h4>Oportunidades de Crescimento</h4></th>
             <th></th>
           </tr>
-          <tr class="tabela" *ngFor="let pergunta of perguntasST4; let i = index">
+          <tr class="selecao" *ngFor="let pergunta of perguntasST4; let i = index">
             <td>
               <label class="pergunta">
                 <p>{{ pergunta }}</p>
