--- a/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.css
+++ b/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.css
@@ -68,8 +68,10 @@ table{
 }
 
 .linha-t h4{
+  padding-top: 0.3em;
   padding-left: 0.5em;
 }
+
 
 /* Título da avaliação e ícones */
 .linha1 {
@@ -77,6 +79,7 @@ table{
   h3 {
     padding-top: 0.5em;
     padding-left: 0.5em;
+    color: #185376;
   }
   i{
     position: relative;
@@ -86,9 +89,11 @@ table{
   }
 }
 
+
 /* Descrição da avaliação e satisfação */
 .linha2 {
   .descricao {
+    color: #185376;
     padding-left: 1em;
     font-weight: normal;
     word-wrap: break-word;
@@ -106,11 +111,12 @@ table{
 
 
 /* Perguntas */
-.pergunta p {
+.pergunta{
+  padding-top: 0.8em;
   padding-left: 1em;
   text-wrap: nowrap;
-  font-size: small;
 }
+
 
 /* Radio buttons */
 .radioOpcao {
@@ -119,5 +125,6 @@ table{
 
 .radio {
   position: relative;
+  padding-top: 1.1em;
   margin-inline: 1.7em;
 }
