shadow para adicionar profundidade

--- a/frontend/src/app/components/pages/avaliacoes/admin/admin.component.css
+++ b/frontend/src/app/components/pages/avaliacoes/admin/admin.component.css
@@ -18,6 +18,7 @@
   transform: translate(-50%, 5%);
   background-color: #F6F8F8D9;
   padding-bottom: 1em;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
 }
 
