--- a/frontend/src/app/components/pages/colaboradores/cadastro-colaboradores/cadastro-colaboradores.component.html
+++ b/frontend/src/app/components/pages/colaboradores/cadastro-colaboradores/cadastro-colaboradores.component.html
@@ -26,7 +26,7 @@
                 <label class="ms-3" for="funcao">Função</label>
             </div>
 
-            <select class="form-select" id="funcao" formControlName="funcao" required>
+            <select class="form-select form-select-lg" id="funcao" formControlName="funcao" required>
                 <option selected>Função...</option>
                 <option value="1">Colaborador</option>
                 <option value="2">Administrador</option>
