--- a/frontend/src/app/components/pages/colaboradores/cadastro-colaboradores/cadastro-colaboradores.component.html
+++ b/frontend/src/app/components/pages/colaboradores/cadastro-colaboradores/cadastro-colaboradores.component.html
@@ -22,7 +22,8 @@
                 <label class="ms-3" for="empresaNome">Empresa</label>
             </div>
             <div class="pb-3">
-                <select class="form-select form-select-lg" id="funcao" formControlName="funcao" required>
+                <select class="form-select" id="funcao" formControlName="funcao" required>
+                    <option selected>Função...</option>
                     <option value="1">Colaborador</option>
                     <option value="2">Administrador</option>
                 </select>
