--- a/frontend/src/app/components/pages/avaliacoes/admin/admin.component.html
+++ b/frontend/src/app/components/pages/avaliacoes/admin/admin.component.html
@@ -1,6 +1,10 @@
 <div class="imagem-fundo">
+  <!--https://www.chartjs.org/docs/latest/-->
 
   <div class="fundo">
+
+    <canvas #myChartCanvas width="200" height="200"></canvas>
+    <!--<canvas id="myChart" width="400" height="400"></canvas>-->
 
     <h2 class="titulo1">• Metas •</h2>
     <div *ngFor="let cartao of cartaoMetas" class="cartao">
