--- a/frontend/src/app/components/pages/avaliacoes/admin/admin.component.html
+++ b/frontend/src/app/components/pages/avaliacoes/admin/admin.component.html
@@ -3,7 +3,7 @@
 
   <div class="fundo">
 
-    <canvas #myChartCanvas width="200" height="200"></canvas>
+    
     <!--<canvas id="myChart" width="400" height="400"></canvas>-->
 
     <h2 class="titulo1">• Metas •</h2>
@@ -18,9 +18,9 @@
   <div class="fundo">
 
     <h2 class="titulo1">• Estatísticas •</h2>
-    <div *ngFor="let cartao of cartaoChart" class="cartao">
+    <div *ngFor="let cartao of cartaoChart; let i = index" class="cartao">
       <h3 class="titulo2"><!--Satisfação Geral-->{{cartao.title2}}</h3>
-      <div class="cartaoChart"><!--gráfico1-->{{ cartao.chart }}</div>
+      <canvas #chartCanvas class="cartaoChart"></canvas>
     </div>
 
   </div>
